# MatDisp-cpp

./: CMakeLists.txt  Element.cpp  Element.h  MSDinSM.sln  MSDinSM.vcxproj  MSDinSM.vcxproj.filters  Matrix.h  Node.cpp  Node.h  README.md  Structure.cpp  Structure.h  common.h  main.cpp
include/: Element.h  Mat.h  Node.h  Structure.h
src/: Element.cpp  Node.cpp  Structure.cpp
test/: main.cpp
